# kactivities-stats

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .vim-template:cpp  .vim-template:h  CMakeLists.txt  KF5ActivitiesStatsConfig.cmake.in  KF6ActivitiesStatsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  QueryTest.cpp  QueryTest.h  ResultSetQuickCheckTest.cpp  ResultSetQuickCheckTest.h  ResultSetTest.cpp  ResultSetTest.h  ResultWatcherTest.cpp  ResultWatcherTest.h  main.cpp
autotests/common/: test.cpp  test.h
autotests/quickcheck/tables/: ResourceInfo.h  ResourceLink.h  ResourceScoreCache.h  common.h
src/: CMakeLists.txt  activitiessync_p.cpp  activitiessync_p.h  cleaning.cpp  cleaning.h  libKActivitiesStats.pc.cmake  query.cpp  query.h  resultmodel.cpp  resultmodel.h  resultset.cpp  resultset.h  resultset_iterator.cpp  resultwatcher.cpp  resultwatcher.h  terms.cpp  terms.h  version.h
src/common/: specialvalues.h
src/common/database/: Database.cpp  Database.h
src/common/database/schema/: ResourcesDatabaseSchema.cpp  ResourcesDatabaseSchema.h
src/common/dbus/: common.h
src/utils/: d_ptr.h  d_ptr_implementation.h  debug_and_return.h  lazy_val.h  member_matcher.h  qsqlquery_iterator.cpp  qsqlquery_iterator.h  slide.h
tests/model/: CMakeLists.txt  modeltest.cpp  modeltest.h  window.cpp  window.h  window.ui
